external-dns/testIngress/dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /dashboard
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
  ingressClassName: nginx
