external-dns/testIngress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banana-apple-ingress
  namespace: user
spec:
  ingressClassName: nginx
  rules:
    - host: "http.user.serveroo.fr"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: apple-service
                port:
                  number: 5678
    - http:
        paths:
          - pathType: Prefix
            path: /banana
            backend:
              service:
                name: banana-service
                port:
                  number: 5678

#  helm upgrade --install ingress-nginx ingress-nginx \
#  --repo https://kubernetes.github.io/ingress-nginx \
#  --namespace ingress-nginx --create-namespace --set controller.hostNetwork=true,controller.service.type="",controller.kind=DaemonSet
