external-dns/testIngress/ssh.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssh-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /ssh
            backend:
              service:
                name: ssh-service
                port:
                  number: 22
  ingressClassName: nginx
